--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top clean-navbar" style="background: rgb(66,113,234);">
-        <div class="container-fluid"><a class="navbar-brand logo" href="#" style="color: rgb(255,255,255);">Impact Effort Matrix</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="#" style="color: rgb(255,255,255);">Impact Effort Matrix</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(243,246,249);">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item"><a class="nav-link active" href="index.html" style="color: rgb(245,245,245);">Home</a></li>
