--- a/addEmployees.html
+++ b/addEmployees.html
@@ -57,7 +57,7 @@
           Proceed to your homepage
         </div>
         <div class="modal-footer">
-          <a href="index.html"><button type="button" class="btn btn-primary rounded-pill" style="background: rgb(66,113,234);">Proceed</button></a>
+          <a href="userProfile.html"><button type="button" class="btn btn-primary rounded-pill" style="background: rgb(66,113,234);">Proceed</button></a>
         </div>
       </div>
     </div>
