--- a/addEmployees.html
+++ b/addEmployees.html
@@ -4,17 +4,19 @@
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Verify Email</title>
+    <title>Add Employees</title>
     <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
+    <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
+    <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
     <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
 </head>
 
 <body>
-    <nav class="navbar navbar-light navbar-expand-lg fixed-top clean-navbar" style="background: rgb(66,113,234);">
+    <nav class="navbar navbar-light navbar-expand-lg fixed-top clean-navbar" style="background: rgb(25,28,147);">
         <div class="container"><a class="navbar-brand logo" href="#" style="color: rgb(255,255,255);">Impact Effort Matrix</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(243,246,249);">
                 <ul class="navbar-nav ml-auto">
@@ -57,7 +59,7 @@
           Proceed to your homepage
         </div>
         <div class="modal-footer">
-          <a href="userProfile.html"><button type="button" class="btn btn-primary rounded-pill" style="background: rgb(66,113,234);">Proceed</button></a>
+          <a href="home.html"><button type="button" class="btn btn-primary rounded-pill" style="background: rgb(66,113,234);">Proceed</button></a>
         </div>
       </div>
     </div>
