--- a/addEmployees.html
+++ b/addEmployees.html
@@ -11,7 +11,6 @@
     <link href="assets/vendor/bootstrap-icons/bootstrap-icons.css" rel="stylesheet">
     <link href="assets/vendor/boxicons/css/boxicons.min.css" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
 </head>
 
@@ -36,21 +35,21 @@
                     <form style="border-radius: 2;color: rgb(33, 37, 41);border: 2px solid rgb(66,113,234) ;border-top-width: 2px;">
                         <div class="form-group text-left">
                             <label class="text-left" for="emails" style="text-align: left;">Employee Emails</label>
-                            <textarea class="form-control" id="emails" rows="3"></textarea>
+                            <textarea class="form-control" id="emails" rows="3" style="border: 2px solid rgb(160,155,241) ;"></textarea>
                         </div>
                         <button type="button" class="btn btn-secondary rounded-pill"style="width:120px;">Skip</button>
-                        <a class="btn btn-primary rounded-pill" data-toggle="modal" data-target="#exampleModalCenter" role="button" href="#feedback" style="background: rgb(66,113,234);">Complete</a>
+                        <a class="btn btn-primary rounded-pill" data-toggle="modal" data-target="#feedback" role="button" href="#feedback" style="background: rgb(25,28,147);">Complete</a>
                     </form>
                 </div>
             </div>
         </section>
   
   <!-- Modal -->
-  <div class="modal fade" id="exampleModalCenter" tabindex="-1" role="dialog" aria-labelledby="exampleModalCenterTitle" aria-hidden="true">
+  <div class="modal fade" id="feedback" tabindex="-1" role="dialog" aria-labelledby="feedack_CenterTitle" aria-hidden="true">
     <div class="modal-dialog modal-dialog-centered" role="document">
       <div class="modal-content">
         <div class="modal-header">
-          <h5 class="modal-title" id="exampleModalLongTitle">Setup Complete</h5>
+          <h5 class="modal-title" id="setup_feedback">Setup Complete</h5>
           <button type="button" class="close" data-dismiss="modal" aria-label="Close">
             <span aria-hidden="true">&times;</span>
           </button>
@@ -59,15 +58,15 @@
           Proceed to your homepage
         </div>
         <div class="modal-footer">
-          <a href="home.html"><button type="button" class="btn btn-primary rounded-pill" style="background: rgb(66,113,234);">Proceed</button></a>
+          <a href="home.html"><button type="button" class="btn btn-primary rounded-pill" style="background: rgb(25,28,147);">Proceed</button></a>
         </div>
       </div>
     </div>
   </div>
 
     </main>
-    <footer class="page-footer dark" style="background: rgb(66,113,234);height: 100px;">
-        <div class="footer-copyright" style="background: rgb(66,113,234);border-style: none;">
+    <footer class="page-footer dark" style="background: rgb(1, 3, 81);height: 100px;">
+        <div class="footer-copyright" style="background: rgb(1, 3, 81);border-style: none;">
             <p>© 2021 Copyright Text</p>
         </div>
     </footer>
