--- a/features.html
+++ b/features.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
 </head>
 
@@ -54,8 +53,8 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer dark" style="background: rgb(66,113,234);height: 100px;">
-        <div class="footer-copyright" style="background: rgb(66,113,234);border-style: none;">
+    <footer class="page-footer dark" style="background: rgb(1, 3, 81);height: 100px;">
+        <div class="footer-copyright" style="background: rgb(1, 3, 81);border-style: none;">
             <p>© 2021 Copyright Text</p>
         </div>
     </footer>
