--- a/index.html
+++ b/index.html
@@ -9,19 +9,24 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
 </head>
 
 <body>
     <nav class="navbar navbar-light navbar-expand-lg fixed-top clean-navbar" style="background: rgb(25,28,147);">
-        <div class="container"><a class="navbar-brand logo" href="#" style="color: rgb(255,255,255);">Impact Effort Matrix</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+        <div class="container"><a class="navbar-brand logo" href="#" style="color: rgb(255,255,255);">Impact Effort
+                Matrix</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span
+                    class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
             <div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(243,246,249);">
                 <ul class="navbar-nav ml-auto">
-                    <li class="nav-item"><a class="nav-link active" href="index.html" style="color: rgb(245,245,245);">Home</a></li>
-                    <li class="nav-item"><a class="nav-link" href="features.html" style="color: rgb(242,241,241);">Features</a></li>
-                    <li class="nav-item"><a class="nav-link" href="registration.html" style="color: rgb(239,239,239);">Register</a></li>
-                    <li class="nav-item"><a class="nav-link" href="login.html" style="color: rgb(247,245,245);">Login</a></li>
+                    <li class="nav-item"><a class="nav-link active" href="index.html"
+                            style="color: rgb(245,245,245);">Home</a></li>
+                    <li class="nav-item"><a class="nav-link" href="features.html"
+                            style="color: rgb(242,241,241);">Features</a></li>
+                    <li class="nav-item"><a class="nav-link" href="registration.html"
+                            style="color: rgb(239,239,239);">Register</a></li>
+                    <li class="nav-item"><a class="nav-link" href="login.html"
+                            style="color: rgb(247,245,245);">Login</a></li>
                 </ul>
             </div>
         </div>
@@ -36,16 +41,20 @@
                         <div class="col-md-6">
                             <h3>Collaborate With Your Team</h3>
                             <div class="getting-started-info">
-                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing elit.</p>
-                            </div><a class="btn btn-outline-primary btn-lg" role="button" href="registration.html">Register Organisation</a>
+                                <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Lorem ipsum dolor sit amet,
+                                    consectetur adipisicing elit. Lorem ipsum dolor sit amet, consectetur adipisicing
+                                    elit.</p>
+                            </div>
+                            <a class="btn btn-primary btn-lg border rounded-pill" role="button" href="registration.html"
+                                style="background: rgb(26, 204, 141);">Register Organisation</a>
                         </div>
                     </div>
                 </div>
             </section>
         </section>
     </main>
-    <footer class="page-footer dark" style="background: rgb(66,113,234);height: 100px;">
-        <div class="footer-copyright" style="background: rgb(66,113,234);border-style: none;">
+    <footer class="page-footer dark" style="background: rgb(1, 3, 81);height: 100px;">
+        <div class="footer-copyright" style="background: rgb(1, 3, 81);border-style: none;">
             <p>© 2021 Copyright Text</p>
         </div>
     </footer>
