--- a/login.html
+++ b/login.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
 </head>
 
@@ -34,7 +33,7 @@
                     <form style="border-radius: 2;color: rgb(33, 37, 41);border: 2px solid rgb(66,113,234) ;border-top-width: 2px;">
                         <div class="form-group text-left"><label class="text-left" for="name" style="text-align: left;">Organisation Name</label><input class="form-control item" type="text" id="name" style="border: 2px solid rgb(160,155,241) ;"></div>
                         <div class="form-group text-left"><label for="email">Email</label><input class="form-control item" type="email" id="email" style="border: 2px solid rgb(160,155,241) ;"></div>
-                        <div class="form-group text-left"><label for="email">Password</label><input class="form-control" type="password" style="border: 2px solid rgb(160,155,241) ;"></div><button class="btn btn-primary btn-block border rounded-pill" type="submit" style="background: rgb(66,113,234);">Login</button>
+                        <div class="form-group text-left"><label for="email">Password</label><input class="form-control" type="password" style="border: 2px solid rgb(160,155,241) ;"></div><button class="btn btn-primary btn-block border rounded-pill" type="submit" style="background: rgb(25,28,147);">Login</button>
                         <div>
                             <p class="text-left" style="font-size: 13px;">Don't have an account?&nbsp;<a class="text-left forgot" style="text-align: left;" href="registration.html">register</a></p>
                         </div>
@@ -43,8 +42,8 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer dark" style="background: rgb(66,113,234);height: 100px;">
-        <div class="footer-copyright" style="background: rgb(66,113,234);border-style: none;">
+    <footer class="page-footer dark" style="background: rgb(1, 3, 81);height: 100px;">
+        <div class="footer-copyright" style="background: rgb(1, 3, 81);border-style: none;">
             <p>© 2021 Copyright Text</p>
         </div>
     </footer>
