--- a/registration.html
+++ b/registration.html
@@ -9,7 +9,6 @@
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
     <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/Login-Form-Dark.css">
     <link rel="stylesheet" href="assets/css/smoothproducts.css">
 </head>
 
@@ -37,7 +36,8 @@
                     <div class="form-group"><label for="name">Organisation Name</label><input class="form-control item" type="text" id="name" style="border: 2px solid rgb(160,155,241) ;"></div>
                     <div class="form-group"><label for="email">Organisation Email</label><input class="form-control item" type="email" id="email" style="border: 2px solid rgb(160,155,241) ;"></div>
                     <div class="form-group"><label for="name">Owner Name</label><input class="form-control item" type="text" id="name" style="border: 2px solid rgb(160,155,241) ;"></div>
-                    <div class="form-group"><label for="email">Owner Email</label><input class="form-control item" type="email" id="email" style="border: 2px solid rgb(160,155,241) ;"></div><a class="btn btn-primary btn-block border rounded-pill" role="button" href="verification.html" style="background: rgb(66,113,234);">Register</a>
+                    <div class="form-group"><label for="email">Owner Email</label><input class="form-control item" type="email" id="email" style="border: 2px solid rgb(160,155,241) ;"></div>
+                    <a class="btn btn-primary btn-block border rounded-pill" role="button" href="verification.html" style="background: rgb(25,28,147);">Register</a>
                     <div>
                         <p style="font-size: 13px;">Already have an account?&nbsp;<a class="text-left forgot" style="text-align: left;" href="login.html">login</a></p>
                     </div>
@@ -45,8 +45,8 @@
             </div>
         </section>
     </main>
-    <footer class="page-footer dark" style="background: rgb(66,113,234);height: 100px;">
-        <div class="footer-copyright" style="background: rgb(66,113,234);border-style: none;">
+    <footer class="page-footer dark" style="background: rgb(1, 3, 81);height: 100px;">
+        <div class="footer-copyright" style="background: rgb(1, 3, 81);border-style: none;">
             <p>© 2021 Copyright Text</p>
         </div>
     </footer>
