--- a/createproject.html
+++ b/createproject.html
@@ -94,7 +94,9 @@
                 </div>
 
                 
-                <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit" data-toggle="modal" data-target="#myModal">Create project</button></div><a class="already" href="#">Want to view existing projects?Visit Home</a>
+                <div class="mb-3"><button class="btn btn-primary d-block w-100" type="submit" data-toggle="modal"
+                    data-target="#myModal">Create project</button></div><a class="already" href="#">Want to view existing projects?Visit
+                  Home</a>
             </form>
         </div>
     </section>
