--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@
           <li><a class="nav-link scrollto active" href="#hero">Home</a></li>
           <li><a class="nav-link scrollto" href="#about">About</a></li>
           <li><a class="nav-link scrollto" href="#employees">Employees</a></li>
-          <li class="dropdown"><a href="#"><span><i class="bi bi-person-fill"></i> Username</span> <i class="bi bi-chevron-down bi-xlarge"></i></a>
+          <li class="dropdown"><a href="#"><span><i class="bi bi-person-fill"></i> User</span> <i class="bi bi-chevron-down bi-xlarge"></i></a>
             <ul>
               <li><a href="#">My profile</a></li>
                   <li><a href="#">My organization</a></li>
@@ -96,8 +96,8 @@
                     <header class="panel-heading">
                         All projects List
                         <span class="pull-right">
-                            <button type="button" id="loading-btn" class="btn btn-warning btn-xs"><i class="fa fa-refresh"></i> Refresh</button>
-                            <a href="#" class=" btn btn-success btn-xs"> Create New Project</a>
+                            
+                            <a href="file:///home/spectrum/Documents/Bootslander/createproject.html" class=" btn btn-success btn-xs"> Create New Project</a>
                         </span>
                     </header>
                     <br/>
