Changed the background

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     </nav>
     <main>
         <section>
-            <section class="clean-block clean-info dark">
+            <section class="clean-block clean-info">
                 <div class="container">
                     <div class="block-heading"></div>
                     <div class="row align-items-center">
