--- a/registration.html
+++ b/registration.html
@@ -26,7 +26,7 @@
         </div>
     </nav>
     <main class="page registration-page">
-        <section class="clean-block clean-form dark">
+        <section class="clean-block clean-form">
             <div class="container">
                 <div class="block-heading">
                     <h1>Register Organisation</h1>
