Added project.html #12 #13

--- a/home.html
+++ b/home.html
@@ -36,7 +36,7 @@
 			<section class="panel">
 				<header class="panel-heading">
 					<span class="pull-right">
-						<a href="#" class="btn btn-primary border rounded-pill" style="background: rgb(26, 204, 141);">
+						<a href="project.html" class="btn btn-primary border rounded-pill" style="background: rgb(26, 204, 141);">
 							Create New Project</a>
 					</span>
 				</header>
@@ -47,8 +47,7 @@
 						<div class="col-md-12">
 							<div class="input-group"><input type="text" placeholder="Search Here" class="input-sm form-control"> <span
 									class="input-group-btn">
-									<button type="button" class="btn btn-primary border btn-sm" style="background: rgb(26, 204, 141);"> <i
-											class="bi bi-search"></i></button>
+									<a href="#" class="btn btn-success btn-xs" style="background: rgb(26, 204, 141);"><i class="bi bi-search"></i></a>
 								</span></div>
 						</div>
 					</div>
@@ -78,9 +77,9 @@
 								<span class="label label-primary">Active</span>
 							</td>
 							<td>
-								<a href="project_details.html" class="btn btn-primary btn-xs"><i class="bi bi-person-plus-fill"></i></a>
-								<a href="#" class="btn btn-info btn-xs"><i class="bi bi-pencil-square"></i></a>
-								<a href="#" class="btn btn-danger btn-xs"><i class="bi bi-trash"></i></a>
+								<a href="project.html" class="btn btn-primary btn-xs"><i class="bi bi-person-plus-fill"></i></a>
+								<a href="project.html" class="btn btn-info btn-xs"><i class="bi bi-pencil-square"></i></a>
+								<a href="project.html" class="btn btn-danger btn-xs"><i class="bi bi-trash"></i></a>
 							</td>
 						</tr>
 						<tr>
@@ -95,9 +94,9 @@
 								<span class="label label-primary">Active</span>
 							</td>
 							<td>
-								<a href="project_details.html" class="btn btn-primary btn-xs"><i class="bi bi-person-plus-fill"></i></a>
-								<a href="#" class="btn btn-info btn-xs"><i class="bi bi-pencil-square"></i> </a>
-								<a href="#" class="btn btn-danger btn-xs"><i class="bi bi-trash"></i></a>
+								<a href="project.html" class="btn btn-primary btn-xs"><i class="bi bi-person-plus-fill"></i></a>
+								<a href="project.html" class="btn btn-info btn-xs"><i class="bi bi-pencil-square"></i> </a>
+								<a href="project.html" class="btn btn-danger btn-xs"><i class="bi bi-trash"></i></a>
 							</td>
 						</tr>
 						<tr>
@@ -112,14 +111,14 @@
 								<span class="label label-primary">Active</span>
 							</td>
 							<td>
-								<a href="project_details.html" class="btn btn-primary btn-xs"><i class="bi bi-person-plus-fill"></i></a>
-								<a href="#" class="btn btn-info btn-xs"><i class="bi bi-pencil-square"></i></a>
-								<a href="#" class="btn btn-danger btn-xs"><i class="bi bi-trash"></i></a>
+								<a href="project.html" class="btn btn-primary btn-xs"><i class="bi bi-person-plus-fill"></i></a>
+								<a href="project" class="btn btn-info btn-xs"><i class="bi bi-pencil-square"></i></a>
+								<a href="project" class="btn btn-danger btn-xs"><i class="bi bi-trash"></i></a>
 							</td>
 						</tr>
 						<tr>
 							<td class="p-name">
-								<a href="project_details.html">CTO SOFTWARE</a>
+								<a href="project.html">CTO SOFTWARE</a>
 								<br>
 								<small>Created 25.06.2021</small>
 							</td>
@@ -129,9 +128,9 @@
 								<span class="label label-primary">Active</span>
 							</td>
 							<td>
-								<a href="project_details.html" class="btn btn-primary btn-xs"><i class="bi bi-person-plus-fill"></i></a>
-								<a href="#" class="btn btn-info btn-xs"><i class="bi bi-pencil-square"></i></a>
-								<a href="#" class="btn btn-danger btn-xs"><i class="bi bi-trash"></i></a>
+								<a href="project.html" class="btn btn-primary btn-xs"><i class="bi bi-person-plus-fill"></i></a>
+								<a href="project.html" class="btn btn-info btn-xs"><i class="bi bi-pencil-square"></i></a>
+								<a href="project.html" class="btn btn-danger btn-xs"><i class="bi bi-trash"></i></a>
 							</td>
 						</tr>
 
