--- a/userProfile.html
+++ b/userProfile.html
@@ -2,120 +2,127 @@
 <html>
 
 <head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <title>Profile</title>
-    <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
-    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
-    <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
-    <link rel="stylesheet" href="assets/css/smoothproducts.css">
-    <link rel="stylesheet" href="assets/css/profile_style.css">
+  <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
+  <title>Profile</title>
+  <link rel="stylesheet" href="assets/bootstrap/css/bootstrap.min.css">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Montserrat:400,400i,700,700i,600,600i">
+  <link rel="stylesheet" href="assets/fonts/simple-line-icons.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.css">
+  <link rel="stylesheet" href="assets/css/smoothproducts.css">
+  <link rel="stylesheet" href="assets/css/profile_style.css">
 </head>
 
 <body>
-    <div class="container">
+  <div class="container">
 
-        <!-- Breadcrumb -->
-        <nav aria-label="breadcrumb" class="main-breadcrumb">
-          <ol class="breadcrumb">
-            <li class="breadcrumb-item"><a href="home.html">Home</a></li>
-            <li class="breadcrumb-item active" aria-current="page">Profile Settings</li>
-          </ol>
-        </nav>
-        <!-- /Breadcrumb -->
-  
-        <div class="row gutters-sm">
-          <div class="col-md-4 d-none d-md-block">
-            <div class="card">
-              <div class="card-body">
-                <nav class="nav flex-column nav-pills nav-gap-y-1">
-                  <a href="#profile" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded active">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user mr-2"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg>Profile Information
-                  </a>
-                  <a href="#account" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings mr-2"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg>Account Settings
-                  </a>
-                  <a href="#security" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded">
-                    <svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shield mr-2"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg>Security
-                  </a>
-                </nav>
-              </div>
+    <!-- Breadcrumb -->
+    <nav aria-label="breadcrumb" class="main-breadcrumb">
+      <ol class="breadcrumb">
+        <li class="breadcrumb-item"><a href="home.html">Home</a></li>
+        <li class="breadcrumb-item active" aria-current="page">Profile Settings</li>
+      </ol>
+    </nav>
+    <!-- /Breadcrumb -->
+
+    <div class="row gutters-sm">
+      <div class="col-md-4 d-none d-md-block">
+        <div class="card">
+          <div class="card-body">
+            <nav class="nav flex-column nav-pills nav-gap-y-1">
+              <a href="#profile" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded active">
+                Profile Information
+              </a>
+              <a href="#account" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded">
+                Account Settings
+              </a>
+              <a href="#security" data-toggle="tab" class="nav-item nav-link has-icon nav-link-faded">
+                Security
+              </a>
+            </nav>
+          </div>
+        </div>
+      </div>
+      <div class="col-md-8">
+        <div class="card">
+          <div class="card-header border-bottom mb-3 d-flex d-md-none">
+            <ul class="nav nav-tabs card-header-tabs nav-gap-x-1" role="tablist">
+              <li class="nav-item">
+                <a href="#profile" data-toggle="tab" class="nav-link has-icon active"></a>
+              </li>
+              <li class="nav-item">
+                <a href="#account" data-toggle="tab" class="nav-link has-icon"></a>
+              </li>
+              <li class="nav-item">
+                <a href="#security" data-toggle="tab" class="nav-link has-icon"></a>
+              </li>
+            </ul>
+          </div>
+          <div class="card-body tab-content">
+            <div class="tab-pane active" id="profile">
+              <h6>YOUR PROFILE INFORMATION</h6>
+              <hr>
+              <form>
+                <div class="form-group">
+                  <label for="fullName">Full Name</label>
+                  <input type="text" class="form-control" id="fullName" aria-describedby="fullNameHelp"
+                    placeholder="Enter your fullname" value="">
+                  <small id="fullNameHelp" class="form-text text-muted">Your name may appear around here where you are
+                    mentioned. You can change or remove it at any time.</small>
+                </div>
+                <div class="form-group">
+                  <label for="url">Email</label>
+                  <input type="email" class="form-control" id="email" placeholder="@gmail.com" value="">
+                </div>
+                <button type="button" class="btn btn-primary rounded-pill" style="background: rgb(25,28,147);">Update
+                  Profile</button>
+                <button type="reset" class="btn btn-light rounded-pill">Reset Changes</button>
+              </form>
+            </div>
+            <div class="tab-pane" id="account">
+              <h6>ACCOUNT SETTINGS</h6>
+              <hr>
+              <form>
+                <div class="form-group">
+                  <label for="username">Username</label>
+                  <input type="text" class="form-control" id="username" aria-describedby="usernameHelp"
+                    placeholder="Enter your username" value="">
+                  <small id="usernameHelp" class="form-text text-muted">After changing your username, your old username
+                    becomes available for anyone else to claim.</small>
+                </div>
+                <hr>
+                <div class="form-group">
+                  <label class="d-block text-danger">Delete Account</label>
+                  <p class="text-muted font-size-sm">Once you delete your account, there is no going back. Please be
+                    certain.</p>
+                </div>
+                <button class="btn btn-danger rounded-pill" type="button">Delete Account</button>
+              </form>
+            </div>
+            <div class="tab-pane" id="security">
+              <h6>SECURITY SETTINGS</h6>
+              <hr>
+              <form>
+                <div class="form-group">
+                  <label class="d-block">Change Password</label>
+                  <input type="text" class="form-control" placeholder="Enter your old password">
+                  <input type="text" class="form-control mt-1" placeholder="New password">
+                  <input type="text" class="form-control mt-1" placeholder="Confirm new password">
+                  <hr>
+                  <button type="button" class="btn btn-primary rounded-pill"
+                    style="background: rgb(25,28,147);">Update</button>
+                </div>
+              </form>
             </div>
           </div>
-          <div class="col-md-8">
-            <div class="card">
-              <div class="card-header border-bottom mb-3 d-flex d-md-none">
-                <ul class="nav nav-tabs card-header-tabs nav-gap-x-1" role="tablist">
-                  <li class="nav-item">
-                    <a href="#profile" data-toggle="tab" class="nav-link has-icon active"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-user"><path d="M20 21v-2a4 4 0 0 0-4-4H8a4 4 0 0 0-4 4v2"></path><circle cx="12" cy="7" r="4"></circle></svg></a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="#account" data-toggle="tab" class="nav-link has-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-settings"><circle cx="12" cy="12" r="3"></circle><path d="M19.4 15a1.65 1.65 0 0 0 .33 1.82l.06.06a2 2 0 0 1 0 2.83 2 2 0 0 1-2.83 0l-.06-.06a1.65 1.65 0 0 0-1.82-.33 1.65 1.65 0 0 0-1 1.51V21a2 2 0 0 1-2 2 2 2 0 0 1-2-2v-.09A1.65 1.65 0 0 0 9 19.4a1.65 1.65 0 0 0-1.82.33l-.06.06a2 2 0 0 1-2.83 0 2 2 0 0 1 0-2.83l.06-.06a1.65 1.65 0 0 0 .33-1.82 1.65 1.65 0 0 0-1.51-1H3a2 2 0 0 1-2-2 2 2 0 0 1 2-2h.09A1.65 1.65 0 0 0 4.6 9a1.65 1.65 0 0 0-.33-1.82l-.06-.06a2 2 0 0 1 0-2.83 2 2 0 0 1 2.83 0l.06.06a1.65 1.65 0 0 0 1.82.33H9a1.65 1.65 0 0 0 1-1.51V3a2 2 0 0 1 2-2 2 2 0 0 1 2 2v.09a1.65 1.65 0 0 0 1 1.51 1.65 1.65 0 0 0 1.82-.33l.06-.06a2 2 0 0 1 2.83 0 2 2 0 0 1 0 2.83l-.06.06a1.65 1.65 0 0 0-.33 1.82V9a1.65 1.65 0 0 0 1.51 1H21a2 2 0 0 1 2 2 2 2 0 0 1-2 2h-.09a1.65 1.65 0 0 0-1.51 1z"></path></svg></a>
-                  </li>
-                  <li class="nav-item">
-                    <a href="#security" data-toggle="tab" class="nav-link has-icon"><svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="feather feather-shield"><path d="M12 22s8-4 8-10V5l-8-3-8 3v7c0 6 8 10 8 10z"></path></svg></a>
-                  </li>
-                </ul>
-              </div>
-              <div class="card-body tab-content">
-                <div class="tab-pane active" id="profile">
-                  <h6>YOUR PROFILE INFORMATION</h6>
-                  <hr>
-                  <form>
-                    <div class="form-group">
-                      <label for="fullName">Full Name</label>
-                      <input type="text" class="form-control" id="fullName" aria-describedby="fullNameHelp" placeholder="Enter your fullname" value="">
-                      <small id="fullNameHelp" class="form-text text-muted">Your name may appear around here where you are mentioned. You can change or remove it at any time.</small>
-                    </div>
-                    <div class="form-group">
-                      <label for="url">Email</label>
-                      <input type="email" class="form-control" id="email" placeholder="@gmail.com" value="">
-                    </div>
-                    <button type="button" class="btn btn-primary rounded-pill" style="background: rgb(25,28,147);">Update Profile</button>
-                    <button type="reset" class="btn btn-light rounded-pill">Reset Changes</button>
-                  </form>
-                </div>
-                <div class="tab-pane" id="account">
-                  <h6>ACCOUNT SETTINGS</h6>
-                  <hr>
-                  <form>
-                    <div class="form-group">
-                      <label for="username">Username</label>
-                      <input type="text" class="form-control" id="username" aria-describedby="usernameHelp" placeholder="Enter your username" value="">
-                      <small id="usernameHelp" class="form-text text-muted">After changing your username, your old username becomes available for anyone else to claim.</small>
-                    </div>
-                    <hr>
-                    <div class="form-group">
-                      <label class="d-block text-danger">Delete Account</label>
-                      <p class="text-muted font-size-sm">Once you delete your account, there is no going back. Please be certain.</p>
-                    </div>
-                    <button class="btn btn-danger rounded-pill" type="button">Delete Account</button>
-                  </form>
-                </div>
-                <div class="tab-pane" id="security">
-                  <h6>SECURITY SETTINGS</h6>
-                  <hr>
-                  <form>
-                    <div class="form-group">
-                      <label class="d-block">Change Password</label>
-                      <input type="text" class="form-control" placeholder="Enter your old password">
-                      <input type="text" class="form-control mt-1" placeholder="New password">
-                      <input type="text" class="form-control mt-1" placeholder="Confirm new password">
-                      <hr>
-                      <button type="button" class="btn btn-primary rounded-pill" style="background: rgb(25,28,147);">Update</button>
-                    </div>
-                  </form>
-                </div>
-            </div>
         </div>
-  
+
       </div>
-    <script src="assets/js/jquery.min.js"></script>
-    <script src="assets/bootstrap/js/bootstrap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
-    <script src="assets/js/smoothproducts.min.js"></script>
-    <script src="assets/js/theme.js"></script>
+      <script src="assets/js/jquery.min.js"></script>
+      <script src="assets/bootstrap/js/bootstrap.min.js"></script>
+      <script src="https://cdnjs.cloudflare.com/ajax/libs/baguettebox.js/1.10.0/baguetteBox.min.js"></script>
+      <script src="assets/js/smoothproducts.min.js"></script>
+      <script src="assets/js/theme.js"></script>
 </body>
 
 </html>
