--- a/home.html
+++ b/home.html
@@ -22,6 +22,7 @@
 						class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(243,246,249);">
 					<ul class="navbar-nav ml-auto">
+						<li class="nav-item"><a class="nav-link" href="#" style="color: rgb(239,239,239);">Employees</a></li>
 						<li class="nav-item"><a class="nav-link" href="userProfile.html"
 								style="color: rgb(247,245,245);">Profile</a></li>
 						<li class="nav-item"><a class="nav-link" href="index.html" style="color: rgb(239,239,239);">Logout</a></li>
