Linked pages for pr1 & pr2 #12 #13

--- a/home.html
+++ b/home.html
@@ -68,7 +68,7 @@
 					<tbody>
 						<tr>
 							<td class="p-name">
-								<a href="project_details.html">IMPACT EFFORT MATRIX</a>
+								<a href="iem.html">IMPACT EFFORT MATRIX</a>
 								<br>
 								<small>Created 25.06.2021</small>
 							</td>
@@ -85,7 +85,7 @@
 						</tr>
 						<tr>
 							<td class="p-name">
-								<a href="project_details.html">LETSHEGO MOBILE APPLICATION</a>
+								<a href="iem.html">LETSHEGO MOBILE APPLICATION</a>
 								<br>
 								<small>Created 25.06.2021</small>
 							</td>
@@ -102,7 +102,7 @@
 						</tr>
 						<tr>
 							<td class="p-name">
-								<a href="project_details.html">BLOOD TRANSFUSION WEBSITE</a>
+								<a href="iem.html">BLOOD TRANSFUSION WEBSITE</a>
 								<br>
 								<small>Created 25.06.2021</small>
 							</td>
@@ -119,7 +119,7 @@
 						</tr>
 						<tr>
 							<td class="p-name">
-								<a href="project.html">CTO SOFTWARE</a>
+								<a href="iem.html">CTO SOFTWARE</a>
 								<br>
 								<small>Created 25.06.2021</small>
 							</td>
