--- a/iem.html
+++ b/iem.html
@@ -16,8 +16,19 @@
 </head>
 
 <body>
-    
-    <main class="h-100 d-flex justify-content-center align-items-center">
+    <header>
+		<nav class="navbar navbar-light navbar-expand-lg  clean-navbar fixed-top" style="background: rgb(25,28,147); height: 10px;">
+			<div class="container"><a class="navbar-brand logo" href="#" style="color: rgb(255,255,255);">[Project name]</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span
+						class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+				<div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(243,246,249);">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item"><a class="nav-link" href="home.html" style="color: rgb(239,239,239);">home</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+    <main class="h-100 d-flex justify-content-center align-items-center pt-4">
         <div class="container">
             <div class="row justify-content-md-center">
 
