--- a/userProfile.html
+++ b/userProfile.html
@@ -14,15 +14,32 @@
 </head>
 
 <body>
+  <header>
+		<nav class="navbar navbar-light navbar-expand-lg  clean-navbar" style="background: rgb(25,28,147);">
+			<div class="container"><a class="navbar-brand logo" href="#" style="color: rgb(255,255,255);">Impact Effort
+					Matrix</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span
+						class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
+				<div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(243,246,249);">
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item"><a class="nav-link" href="home.html" style="color: rgb(239,239,239);">Home</a></li>
+			
+						<li class="nav-item"><a class="nav-link" href="index.html" style="color: rgb(239,239,239);">Logout</a></li>
+					</ul>
+				</div>
+			</div>
+		</nav>
+	</header>
+<br>
+<br>
   <div class="container">
 
     <!-- Breadcrumb -->
-    <nav aria-label="breadcrumb" class="main-breadcrumb">
+    <!-- <nav aria-label="breadcrumb" class="main-breadcrumb">
       <ol class="breadcrumb">
         <li class="breadcrumb-item"><a href="home.html">Home</a></li>
         <li class="breadcrumb-item active" aria-current="page">Profile Settings</li>
       </ol>
-    </nav>
+    </nav> -->
     <!-- /Breadcrumb -->
 
     <div class="row gutters-sm">
