--- a/iem.html
+++ b/iem.html
@@ -17,29 +17,46 @@
 
 <body>
     <header>
-		<nav class="navbar navbar-light navbar-expand-lg  clean-navbar fixed-top" style="background: rgb(25,28,147); height: 10px;">
-			<div class="container"><a class="navbar-brand logo" href="#" style="color: rgb(255,255,255);">[Project name]</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span
+		<nav class="navbar navbar-light navbar-expand-lg  clean-navbar" style="background: rgb(25,28,147); height:80px;">
+			<div class="container"><a class="navbar-brand logo" href="#" style="color: rgb(255,255,255);">Project Name</a><button data-toggle="collapse" class="navbar-toggler" data-target="#navcol-1"><span
 						class="sr-only">Toggle navigation</span><span class="navbar-toggler-icon"></span></button>
 				<div class="collapse navbar-collapse" id="navcol-1" style="color: rgb(243,246,249);">
 					<ul class="navbar-nav ml-auto">
-						<li class="nav-item"><a class="nav-link" href="home.html" style="color: rgb(239,239,239);">home</a></li>
+						<li class="nav-item"><a class="nav-link" href="home.html" style="color: rgb(239,239,239);">Home</a></li>
+                        <li class="nav-item"><a class="nav-link" href="index.html" style="color: rgb(239,239,239);">Logout</a></li>
 					</ul>
 				</div>
 			</div>
 		</nav>
 	</header>
-    <main class="h-100 d-flex justify-content-center align-items-center pt-4">
+    <main class="h-100 d-flex justify-content-center align-items-center pt-3">
         <div class="container">
             <div class="row justify-content-md-center">
 
                 <div class="col quadrants" id="quadrants">
                     <div class="row">
-                        <div class="col quad-1 quads" id="quad1" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-                        <div class="col quad-2 quads" id="quad2" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div class="col quad-1 quads" id="quad1" ondrop="drop(event)" ondragover="allowDrop(event)">
+                            <div class="quad-header">
+                                <p>High Impact/Low Effort</p>
+                            </div>
+                        </div>
+                        <div class="col quad-2 quads" id="quad2" ondrop="drop(event)" ondragover="allowDrop(event)">
+                            <div class="quad-header">
+                                <p>High Impact/High Effort</p>
+                            </div>
+                        </div>
                     </div>
                     <div class="row">
-                        <div class="col quad-3 quads" id="quad3" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
-                        <div class="col quad-4 quads" id="quad4" ondrop="drop(event)" ondragover="allowDrop(event)"></div>
+                        <div class="col quad-3 quads" id="quad3" ondrop="drop(event)" ondragover="allowDrop(event)">
+                            <div class="quad-header">
+                                <p>Low Impact/Low Effort</p>
+                            </div>
+                        </div>
+                        <div class="col quad-4 quads" id="quad4" ondrop="drop(event)" ondragover="allowDrop(event)">
+                            <div class="quad-header">
+                                <p>Low Impact/High Effort</p>
+                            </div>
+                        </div>
                     </div>
                 </div>
 
@@ -49,11 +66,16 @@
                     </div>
 
                     <div class="features-body pt-3" ondrop="drop(event)" ondragover="allowDrop(event)">
-                        <div class="my-feature" id="drag1" draggable="true" ondragstart="drag(event)"></div>
+                        <p id="feature-instruction">Drag feature and drop in the quadrants</p>
+                        <div class="my-feature" id="drag1" draggable="true" ondragstart="drag(event)">Create Organisation</div>
+                        <div class="my-feature" id="drag2" draggable="true" ondragstart=" drag(event)">Add Employees</div>
+                        <div class="my-feature" id="drag3" draggable="true" ondragstart="drag(event)">Create Project</div>
+                        <div class="my-feature" id="drag4" draggable="true" ondragstart="drag(event)">Add Participants</div>
                     </div>
                     
                     <div class="features-bottom">
-                        <a class="btn btn-primary btn-block" role="button" href="#">Add feature</a>
+                        <a href="#" id="feature-button" class="btn btn-primary border btn-block" style="background: rgb(25,28,147);">
+							Add Feature</a>
                     </div>
                 </div>
 
