--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 <div class="container">
                     <div class="block-heading"></div>
                     <div class="row align-items-center">
-                        <div class="col-md-6"><img class="img-thumbnail" src="assets/img/details-4.png"></div>
+                        <div class="col-md-6"><img class="img-thumbnail" src="assets/img/hero-img.png"></div>
                         <div class="col-md-6">
                             <h3>Collaborate With Your Team</h3>
                             <div class="getting-started-info">
