--- a/index.html
+++ b/index.html
@@ -49,8 +49,8 @@
           <li><a class="nav-link scrollto" href="#team">Team</a></li>
           <li><a class="nav-link scrollto" href="#pricing">Pricing</a></li
           <li><a class="nav-link scrollto" href="#contact">Contact</a></li>
-          <li><a class="nav-link scrollto" href="#">Create Organisation</a></li
-          <li><a class="nav-link scrollto" href="#">Signin</a></li>
+          <li><a class="nav-link scrollto" href="registration.html">Create Organisation</a></li
+          <li><a class="nav-link scrollto" href="login.html">Signin</a></li>
         </ul>
         <i class="bi bi-list mobile-nav-toggle"></i>
       </nav><!-- .navbar -->
